recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:2: error: ';' expected but ',' found.
    avance(lenght) ; droite(120) ; avance(lenght) ; droite(60) ; avance(length) , droite(60)
                                                                                ^