recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  if (levels==0) {
    avance(lenght) ; droite(120) ; avance(lenght) ; droite(60) ; avance(length) , droite(60)
  }  
  else {
    return Nil
  }
}